# Imitation-Of-QQ-Client-Win

./: CMakeLists.txt  ChangeAvatarView.qml  GroupChangeAvatarView.qml  GroupDataEditView.qml  GroupDataView.qml  LayoutLoginView.qml  LayoutRegisterView.qml  LayoutUserView.qml  Main.qml  MyAddFriendView.qml  MyChatView.qml  MyCheckImage.qml  MyCreateGroupView.qml  MyGroupChatView.qml  MyGroupMsgListView.qml  MyListView.qml  MyMenuView.qml  MyMsgListView.qml  MyProfileImage.qml  MyRadioButton.qml  MyShapeLine.qml  MyShowPasswordImage.qml  MyTextField.qml  MyToolButton.qml  PersonalDataEditView.qml  PersonalDataView.qml  logo.rc  main.cpp  mythread.cpp  mythread.h  resource.qrc  tcpclient.cpp  tcpclient.h
